<resources>
    <string name="app_name">ServiceNovigrad</string>
    <!-- Strings related to register -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_login">Already have an account? Login instead.</string>

    <!-- Strings related to LOGIN -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Don\'t have an account? Register now.</string>
    <!-- Strings related to HOME -->
    <string name="logged_in">Logged in.</string>
    <string name="usernameKey">Username:</string>
    <string name="roleKey">Role:</string>
    <string name="action_logout">Logout</string>
    <string name="title_services">Manage Services</string>
    <string name="title_accounts">Manage Accounts</string>
    <string name="action_addService">Create New Service</string>
    <!-- Strings related to Add Service Fragment -->
    <string name="action_createService">Create</string>
    <string name="action_deleteService">Delete</string>
    <string name="action_modifyService">Save</string>
    <string name="action_lookupService">Lookup</string>
    <string name="action_clearServiceTextFields">Clear</string>

    <string name="hint_serviceName">Short Name for Service</string>
    <string name="hint_serviceDisplayname">Full Name of Service</string>
    <string name="hint_servicePrice">Price</string>
    <string name="hint_serviceRequiredInfo">Required Customer Info (; between items)</string>
    <string name="hint_serviceDocuments">Required Documents (; between items)</string>

    <string name="hint_accountName">Account Name</string>
    <string name="action_lookupAccount">Lookup</string>
    <string name="action_deleteAccount">Delete Account</string>
    <!-- Employee Branch Setup -->
    <string name="hint_branchSetup_Address">Branch Address</string>
    <string name="hint_branchSetup_PhoneNumber">Branch Phone Number (Digits Only)</string>
    <string name="hint_branchSetup_OpeningTime">Pick Opening Time</string>
    <string name="hint_branchSetup_ClosingTime">Pick Closing Time</string>

    <string name="employee_title_manageBranchServices">Manage Branch Services</string>
    <string name="employee_title_manageServiceRequests">Manage Service Requests</string>

    <!-- Employee - Review Service Request Dialog -->
    <string name="employee_reviewRequest_title_customerInfo">Customer Info</string>
    <string name="employee_reviewRequest_title_providedDocuments">Provided Documents</string>

    <string-array name="branchSearchMethod_array">
        <item>No Filter</item>
        <item>By Address</item>
        <item>By Working Hours</item>
        <item>By Service</item>
    </string-array>

    <string-array name="DaysOfTheWeek_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string name="customer_serviceRequests_title">My Service Requests</string>
    <string name="customer_serviceRequests_newServiceRequestAction">New Service Request (+)</string>

    <string name="customer_branchSearch_title">Find A Branch</string>

    <!-- Customer - Create Service Request Dialog -->

    <string name="customer_createRequest_title_requiredInfo">Required Customer Information</string>
    <string name="customer_createRequest_title_requiredDocs">Required Documents</string>

</resources>