<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">
  <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
          android:layout_marginRight="8dp" android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
      <TextView
              android:text="@string/logged_in"
              android:layout_width="293dp"
              android:layout_height="match_parent" android:id="@+id/loggedIn_homeScreen" android:textSize="24sp"
              android:textStyle="bold" android:layout_gravity="left" android:gravity="center_vertical"/>
      <Button
              android:text="@string/action_logout"
              android:layout_width="100dp"
              android:layout_height="wrap_content" android:id="@+id/btn_Logout" android:layout_gravity="right"/>
    </LinearLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
      <TextView
              android:text="@string/usernameKey"
              android:layout_width="194dp"
              android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"
              android:textSize="18sp" android:textStyle="bold"/>
      <TextView
              android:text="TextView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:id="@+id/viewUsername_homeScreen" android:textSize="18sp"
              android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
      <TextView
              android:text="@string/roleKey"
              android:layout_width="105dp"
              android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"
              android:textSize="18sp" android:textStyle="bold"/>
      <TextView
              android:text="TextView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:id="@+id/viewRole_homeScreen" android:textSize="18sp"
              android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/manageServicesContainer">
      <Space
              android:layout_width="match_parent"
              android:layout_height="35dp"/>
      <TextView
              android:text="@string/title_services"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:id="@+id/title_Services" android:textSize="18sp"
              android:textColor="#000000" android:textStyle="bold"/>
      <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none|textPersonName"
                android:ems="10"
                android:id="@+id/serviceNameTextField" android:hint="@string/hint_serviceName"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/serviceDisplaynameTextField" android:hint="@string/hint_serviceDisplayname"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/servicePriceTextField" android:hint="@string/hint_servicePrice"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage|none"
                android:ems="10"
                android:id="@+id/serviceRequiredInfoTextField" android:hint="@string/hint_serviceRequiredInfo"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage|textPersonName"
                android:ems="10"
                android:id="@+id/serviceDocumentsTextField" android:hint="@string/hint_serviceDocuments"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
          <Button
                  android:text="@string/action_lookupService"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:id="@+id/btn_lookupService" android:layout_weight="1"/>
          <Space
                  android:layout_width="10dp"
                  android:layout_height="wrap_content" android:layout_weight="1"/>
          <Button
                  android:text="@string/action_createService"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:id="@+id/btn_addService"/>
          <Button
                  android:text="@string/action_deleteService"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:id="@+id/btn_deleteService" android:layout_weight="1"/>
          <Button
                  android:text="@string/action_modifyService"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:id="@+id/btn_saveService" android:layout_weight="1"/>
        </LinearLayout>
        <Button
                android:text="@string/action_clearServiceTextFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_clearServiceTextFields"/>
      </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/manageAccountsContainer">
      <Space
              android:layout_width="match_parent"
              android:layout_height="30dp"/>
      <TextView
              android:text="@string/title_accounts"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:id="@+id/title_Accounts" android:textSize="18sp"
              android:textColor="#000000" android:textStyle="bold"/>
      <TextView
              android:text="TextView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:id="@+id/accountStatusTextView" android:textSize="18sp"/>
      <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPersonName"
              android:ems="10"
              android:id="@+id/accountNameTextField" android:hint="@string/hint_accountName"/>
      <LinearLayout
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
        <Button
                android:text="@string/action_lookupAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_lookupAccount" android:layout_weight="1"/>
        <Button
                android:text="@string/action_deleteAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_deleteAccount" android:layout_weight="1"/>
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>