<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".adapters.admin.ModifyServiceFragment"
                                                   android:id="@+id/frameLayout">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/manageServicesContainer"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/serviceDisplaynameTextField" android:hint="@string/hint_serviceDisplayname"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/servicePriceTextField" android:hint="@string/hint_servicePrice"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage|none"
                    android:ems="10"
                    android:id="@+id/serviceRequiredInfoTextField" android:hint="@string/hint_serviceRequiredInfo"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage|textPersonName"
                    android:ems="10"
                    android:id="@+id/serviceDocumentsTextField" android:hint="@string/hint_serviceDocuments"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        android:text="@string/action_modifyService"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/btn_saveService"
                        android:layout_weight="1"/>
                <Button
                        android:text="@string/action_deleteService"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/btn_deleteService"
                        android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>