<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".general.RegisterActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="100dp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/username" android:hint="@string/username"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email" android:hint="@string/email"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password" android:hint="@string/password"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/spinner_Roles" android:spinnerMode="dropdown"
                android:entries="@array/roles_array"/>
        <Button
                android:text="Create Account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_Register"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/login_registerScreen"
                android:text="@string/action_login" android:clickable="true" android:gravity="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>