<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".adapters.admin.ManageAccountsFragment"
                                                   android:id="@+id/frameLayout2">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/manageAccountsContainer"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp">
        <TextView
                android:text="@string/title_accounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/title_Accounts" android:textSize="18sp"
                android:textColor="#000000" android:textStyle="bold"/>
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/accountStatusTextView" android:textSize="18sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/accountNameTextField" android:hint="@string/hint_accountName"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/action_lookupAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btn_lookupAccount" android:layout_weight="1"/>
            <Button
                    android:text="@string/action_deleteAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btn_deleteAccount" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>