<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:layout_margin="8dp"
                                                   android:id="@+id/relativeLayout">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/branch_addressTextField"
                android:hint="@string/hint_branchSetup_Address"
                android:layout_alignWithParentIfMissing="false"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/branch_phoneNumberTextField"
                android:hint="@string/hint_branchSetup_PhoneNumber"
        />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/branch_viewOpeningTime"
                    android:layout_weight="1"
                    android:gravity="center" android:textSize="18sp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/branch_viewClosingTime"
                    android:layout_weight="1"
                    android:gravity="center" android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/hint_branchSetup_OpeningTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btn_branch_pickOpeningTime"
                    android:layout_weight="1"/>
            <Button
                    android:text="@string/hint_branchSetup_ClosingTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btn_branch_pickClosingTime"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>